IJPS-37: Added reponse to payload when records are created